# audio-streamer

./: Cargo.toml
src/: capture.rs  main.rs
src/capture/: pipewire.rs  wasapi.rs
