[package]
name = "audio-streamer"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pipewire = "0.7.2"
spa = { package = "libspa", version = "0.7" }
anyhow = "1"
thiserror = "1"
libc = "0.2"
nix = "0.27.1"
bitflags = "2"
clap = { version = "4.3.2", features = ["derive"] }
once_cell = "1.5"
byteorder = "1.5.0"

[profile.production]
inherits = "release"
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
