[package]
name = "audio-streamer"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
byteorder = "1.5.0"
clap = { version = "4.3.2", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
pipewire = "0.7.2"
spa = { package = "libspa", version = "0.7" }

[target.'cfg(target_os = "windows")'.dependencies]
wasapi = "0.14.0"


[profile.production]
inherits = "release"
strip = true
opt-level = 3
lto = true
